[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/characters/Player/Idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/characters/Player/Attack.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/Player/Walk.png" type="Texture" id=4]
[ext_resource path="res://scripts/player_camera.gd" type="Script" id=5]
[ext_resource path="res://sounds/player/attack.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/characters/Player/Shield.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/Player/Death.png" type="Texture" id=8]
[ext_resource path="res://assets/characters/Player/Take Hit.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "attack_step_02",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "block",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 24 ) ],
"loop": true,
"name": "attack_step_01",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=27]
radius = 14.0
height = 24.0

[sub_resource type="CircleShape2D" id=28]
radius = 26.0

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0, 0.568627, 0.0588235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Player",
]]
shape = SubResource( 27 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0, -45.2201 )
current = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.4
drag_margin_right = 0.0
drag_margin_bottom = 0.5
editor_draw_drag_margin = true
script = ExtResource( 5 )

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 42.869, -3.429 )
shape = SubResource( 28 )
disabled = true

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="GUI" type="CanvasLayer" parent="."]
layer = 2

[node name="HealthBar" type="ProgressBar" parent="GUI"]
margin_left = 30.0
margin_top = 30.0
margin_right = 380.0
margin_bottom = 55.0
custom_styles/fg = SubResource( 29 )
custom_styles/bg = SubResource( 30 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
